fix: quicklinks wrong background color

--- a/assets/source/3.0/sass/navigation/_quick-links.scss
+++ b/assets/source/3.0/sass/navigation/_quick-links.scss
@@ -1,5 +1,5 @@
 /* Colors */
-$c-quicklinks-background-color: var(--c-quicklinks-background-color);
+$c-quicklinks-background-color: var(--c-quicklinks-background-color, transparent) !default;
 $c-quicklinks-background-sticky-color: var(--c-quicklinks-sticky-background-color, $color-white) !default;
 $c-quicklinks-icon-color: var(--c-quicklinks-icon-color);
 $c-quicklinks-icon-background-color: var(--c-quicklinks-icon-background-color) !default;
@@ -15,7 +15,7 @@ $c-quicklinks-gap: var(--c-quicklinks-gap, 2) !default;
     margin-bottom: calc($base * 5);
     background-color: transparent;
     
-    .c-header {
+    &.c-header {
         background-color: #{$c-quicklinks-background-color};
     }
 
